--- a/SimTECH/SimTECH/Pages/Setup/Teams.razor
+++ b/SimTECH/SimTECH/Pages/Setup/Teams.razor
@@ -12,7 +12,7 @@
             <HierarchyColumn T="Team" />
             <Column T="Team" Field="Name">
                 <CellTemplate>
-                    <span>@context.Item.Country.CountryCodeToEmoji() @context.Item.Name</span>
+                    <span class="flag flag-sm">@context.Item.Country.CountryCodeToEmoji()</span> @context.Item.Name
                 </CellTemplate>
             </Column>
         </Columns>
