--- a/SimTECH/SimTECH/Shared/SetupLayout.razor
+++ b/SimTECH/SimTECH/Shared/SetupLayout.razor
@@ -6,18 +6,12 @@
         <MudToolBar>
             <MudButton Href="/drivers" Variant="Variant.Filled" StartIcon="@Icons.Material.Outlined.PeopleAlt" Color="Color.Inherit" IconColor="Color.Primary" Size="Size.Large">Drivers</MudButton>
             <MudButton Href="/teams" Variant="Variant.Filled" StartIcon="@Icons.Material.Outlined.CarRepair" Color="Color.Inherit" IconColor="Color.Primary" Size="Size.Large">Teams</MudButton>
-            <MudButton Href="/" Variant="Variant.Filled" StartIcon="@Icons.Material.Outlined.AddRoad" Color="Color.Inherit" IconColor="Color.Primary" Size="Size.Large">Tracks</MudButton>
-            <MudButton Href="/" Variant="Variant.Filled" StartIcon="@Icons.Material.Outlined.FlashOn" Color="Color.Inherit" IconColor="Color.Primary" Size="Size.Large">Traits</MudButton>
-            <MudButton Href="/" Variant="Variant.Filled" StartIcon="@Icons.Material.Outlined.SettingsInputComponent" Color="Color.Inherit" IconColor="Color.Default" Size="Size.Large">Engines</MudButton>
-            <MudButton Href="/" Variant="Variant.Filled" StartIcon="@Icons.Material.Outlined.Power" Color="Color.Inherit" IconColor="Color.Tertiary" Size="Size.Large">Suppliers</MudButton>
-            <MudButton Href="/" Variant="Variant.Filled" StartIcon="@Icons.Material.Outlined.ModeStandby" Color="Color.Inherit" IconColor="Color.Secondary" Size="Size.Large">Tyres</MudButton>
-            <MudButton Href="/" Variant="Variant.Filled" StartIcon="@Icons.Material.Outlined.Extension" Color="Color.Inherit" IconColor="Color.Primary" Size="Size.Large">Strategies</MudButton>
+            <MudButton Href="/engines" Variant="Variant.Filled" StartIcon="@Icons.Material.Outlined.SettingsInputComponent" Color="Color.Inherit" IconColor="Color.Default" Size="Size.Large">Engines</MudButton>
+            <MudButton Href="/tracks" Variant="Variant.Filled" StartIcon="@Icons.Material.Outlined.AddRoad" Color="Color.Inherit" IconColor="Color.Primary" Size="Size.Large">Tracks</MudButton>
+            <MudButton Href="/traits" Variant="Variant.Filled" StartIcon="@Icons.Material.Outlined.FlashOn" Color="Color.Inherit" IconColor="Color.Primary" Size="Size.Large">Traits</MudButton>
         </MudToolBar>
     </MudPaper>
     <MudContainer>
         @Body
     </MudContainer>
 </MudLayout>
-
-@code {
-}
