--- a/SimTECH/SimTECH/Components/MudCountrySelect.razor
+++ b/SimTECH/SimTECH/Components/MudCountrySelect.razor
@@ -1,4 +1,7 @@
-﻿<MudSelect @bind-Value="@_selectedCountry" Label="Select a country" Variant="Variant.Outlined">
+﻿@inherits InputBase<Country>
+
+<MudSelect @bind-Value="HandleSelection" Label="Select a country" Variant="Variant.Outlined">
+    @ChildContent
     @foreach (var country in CountrySelectItems)
     {
         <MudSelectItem Value="@country.Code">
@@ -8,21 +11,46 @@
 </MudSelect>
 
 @code {
-    private string _selectedCountry { get; set; } = string.Empty;
+    //public Country _selectedCountry { get; set; } = Country.XX;
     private Country[] Countries = (Country[])Enum.GetValues(typeof(Country));
+
+    [Parameter]
+    public RenderFragment ChildContent { get; set; }
+
+    public Country HandleSelection
+    {
+        get { return CurrentValue; }
+        set { CurrentValue = value; }
+    }
 
     private List<CountrySelectItem> CountrySelectItems => Countries
         .Select(e => new CountrySelectItem
             {
-                Code = e.ToString(),
+                Code = e,
                 Name = e.GetDescription(),
                 Flag = e.ToString().CountryCodeToEmoji(),
             })
         .ToList();
 
+    protected override bool TryParseValueFromString(string? value, out Country result, out string validationErrorMessage)
+    {
+        result = default;
+
+        if (value != null && Enum.TryParse<Country>(value, out Country parsedResult))
+        {
+            result = parsedResult;
+
+            validationErrorMessage = string.Empty;
+            return true;
+        }
+
+        validationErrorMessage = "Failed to handle selected";
+        return false;
+    }
+
     public class CountrySelectItem
     {
-        public string Code { get; set; } = string.Empty;
+        public Country Code { get; set; }
         public string Name { get; set; } = string.Empty;
         public string Flag { get; set; } = string.Empty;
     }
