--- a/SimTECH/SimTECH/Pages/Index.razor
+++ b/SimTECH/SimTECH/Pages/Index.razor
@@ -3,7 +3,7 @@
 @inject NavigationManager Nav
 @attribute [AllowAnonymous]
 
-<PageTitle>Index</PageTitle>
+<PageTitle>Home</PageTitle>
 
 <MudContainer Class="mt-16 px-8" MaxWidth="MaxWidth.False">
     <MudGrid>
@@ -27,7 +27,7 @@
             <MudGrid>
                 <MudItem xs="12">
                     <MudPaper Elevation="2" Class="pa-4" Style="height: 200px;">
-                        <CountryFlag Code="NL" />
+                        <CountryFlag Code="Country.NL" />
                     </MudPaper>
                 </MudItem>
                 <MudItem xs="12">
@@ -86,7 +86,7 @@
 </MudContainer>
 
 @code {
-    public Country _selectedCountry { get; set; } = Country.XX;
+    public Country _selectedCountry { get; set; } = Country.NL;
 
     private void NavigateHome()
     {
