--- a/SimTECH/SimTECH/Pages/Setup/Teams.razor
+++ b/SimTECH/SimTECH/Pages/Setup/Teams.razor
@@ -1,6 +1,8 @@
 ﻿@page "/teams"
 @layout SetupLayout
+
 @inject TeamService TeamService
+@inject IDialogService DialogService
 
 <PageTitle>Teams</PageTitle>
 
