--- a/SimTECH/SimTECH/Shared/NavMenu.razor
+++ b/SimTECH/SimTECH/Shared/NavMenu.razor
@@ -1,7 +1,7 @@
 ﻿<MudNavMenu>
     <MudNavLink Href="/" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Home">Home</MudNavLink>
     <MudNavLink Href="/setup" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Settings">Entrants</MudNavLink>
-    <MudNavLink Href="/factor" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Settings">Race factors</MudNavLink>
-    <MudNavLink Href="/season" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Flag">Season</MudNavLink>
-    <MudNavLink Href="/league" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Flag">League</MudNavLink>
+    <MudNavLink Href="/factor" Match="NavLinkMatch.Prefix" Icon="fas fa-gas-pump">Race factors</MudNavLink>
+    <MudNavLink Href="/seasons" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Flag">Seasons</MudNavLink>
+    <MudNavLink Href="/leagues" Match="NavLinkMatch.Prefix" Icon="@Icons.Custom.Uncategorized.ChessKing">Leagues</MudNavLink>
 </MudNavMenu>
