--- a/SimTECH/SimTECH/Shared/SetupLayout.razor
+++ b/SimTECH/SimTECH/Shared/SetupLayout.razor
@@ -11,6 +11,15 @@
             <MudButton Href="/traits" Variant="Variant.Filled" StartIcon="@Icons.Material.Outlined.FlashOn" Color="Color.Inherit" IconColor="Color.Primary" Size="Size.Large">Traits</MudButton>
         </MudToolBar>
     </MudPaper>
+    <MudPaper Class="mt-10 mb-10" Elevation="15">
+        <MudButtonGroup Variant="Variant.Filled" Color="Color.Inherit" Size="Size.Large">
+            <MudButton Href="/drivers" StartIcon="@Icons.Material.Outlined.PeopleAlt" IconColor="Color.Transparent">Drivers</MudButton>
+            <MudButton Href="/teams" StartIcon="@Icons.Material.Outlined.CarRepair" IconColor="Color.Primary">Teams</MudButton>
+            <MudButton Href="/engines" StartIcon="@Icons.Material.Outlined.SettingsInputComponent" IconColor="Color.Default">Engines</MudButton>
+            <MudButton Href="/tracks" StartIcon="@Icons.Material.Outlined.AddRoad" IconColor="Color.Secondary">Tracks</MudButton>
+            <MudButton Href="/traits" StartIcon="@Icons.Material.Outlined.FlashOn" IconColor="Color.Tertiary">Traits</MudButton>
+        </MudButtonGroup>
+    </MudPaper>
     <MudContainer>
         @Body
     </MudContainer>
