Quick-wrote the view and edit pages for drivers, teams, traits and tracks

--- a/SimTECH/SimTECH/Components/CountryFlag.razor
+++ b/SimTECH/SimTECH/Components/CountryFlag.razor
@@ -19,6 +19,8 @@
         {
             switch (this.Size)
             {
+                case FlagSize.Tiny:
+                    return "flag-xs";
                 case FlagSize.Small:
                     return "flag-sm";
                 case FlagSize.Large:
