--- a/SimTECH/SimTECH/Components/MudCountrySelect.razor
+++ b/SimTECH/SimTECH/Components/MudCountrySelect.razor
@@ -29,7 +29,7 @@
             })
         .ToList();
 
-    private Country[] Countries = (Country[])Enum.GetValues(typeof(Country));
+    private Country[] Countries = Enum.GetValues<Country>();
 
     protected override bool TryParseValueFromString(string? value, out Country result, out string validationErrorMessage)
     {
