--- a/SimTECH/SimTECH/Shared/SetupLayout.razor
+++ b/SimTECH/SimTECH/Shared/SetupLayout.razor
@@ -12,7 +12,7 @@
         </MudToolBar>
     </MudPaper>
     <MudPaper Class="mt-10 mb-10" Elevation="15">
-        <MudButtonGroup Variant="Variant.Filled" Color="Color.Inherit" Size="Size.Large">
+        <MudButtonGroup Variant="Variant.Filled" Color="Color.Inherit" Size="Size.Large" Style="flex:1">
             <MudButton Href="/drivers" StartIcon="@Icons.Material.Outlined.PeopleAlt" IconColor="Color.Transparent">Drivers</MudButton>
             <MudButton Href="/teams" StartIcon="@Icons.Material.Outlined.CarRepair" IconColor="Color.Primary">Teams</MudButton>
             <MudButton Href="/engines" StartIcon="@Icons.Material.Outlined.SettingsInputComponent" IconColor="Color.Default">Engines</MudButton>
