--- a/SimTECH/SimTECH/Pages/Setup/EngineCreate.razor
+++ b/SimTECH/SimTECH/Pages/Setup/EngineCreate.razor
@@ -1,5 +1,40 @@
-﻿<h3>EngineCreate</h3>
+﻿@inject EngineService EngineService
+
+<MudDialog>
+    <TitleContent>
+        <MudText>
+            Add new engine
+        </MudText>
+    </TitleContent>
+    <DialogContent>
+        <MudForm Model="@engine">
+            <MudCard>
+                <MudCardContent>
+                    <MudTextField T="string" @bind-Value="engine.Name" Label="Name" />
+                </MudCardContent>
+            </MudCard>
+        </MudForm>
+    </DialogContent>
+    <DialogActions>
+        <MudButton OnClick="Cancel">Cancel</MudButton>
+        <MudButton Color="Color.Primary" OnClick="Submit">Ok</MudButton>
+    </DialogActions>
+</MudDialog>
 
 @code {
+    [CascadingParameter]
+    protected MudDialogInstance? EngineDialog { get; set; }
 
+    [Parameter]
+    public Engine engine { get; set; } = new();
+
+    private void Submit()
+    {
+        // TODO: Function call just adds it here, but we want to actually store it!
+        EngineService.CreateEngine(engine);
+
+        EngineDialog?.Close(DialogResult.Ok(engine));
+    }
+
+    private void Cancel() => EngineDialog?.Cancel();
 }
