--- a/SimTECH/SimTECH/wwwroot/css/site.css
+++ b/SimTECH/SimTECH/wwwroot/css/site.css
@@ -12,8 +12,12 @@ html, body {
     font-family: 'NotoColorEmojiLimited', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
 }
 
-.flag-sm {
+.flag-xs {
     font-size: 1em;
+}
+
+.flag-sm {
+    font-size: 1.5em;
 }
 
 .flag-md {
