--- a/SimTECH/SimTECH/Shared/SetupLayout.razor
+++ b/SimTECH/SimTECH/Shared/SetupLayout.razor
@@ -2,24 +2,13 @@
 @layout MainLayout
 
 <MudLayout>
-    <MudPaper Class="mt-10 mb-10" Elevation="15">
-        <MudToolBar>
-            <MudButton Href="/drivers" Variant="Variant.Filled" StartIcon="@Icons.Material.Outlined.PeopleAlt" Color="Color.Inherit" IconColor="Color.Primary" Size="Size.Large">Drivers</MudButton>
-            <MudButton Href="/teams" Variant="Variant.Filled" StartIcon="@Icons.Material.Outlined.CarRepair" Color="Color.Inherit" IconColor="Color.Primary" Size="Size.Large">Teams</MudButton>
-            <MudButton Href="/engines" Variant="Variant.Filled" StartIcon="@Icons.Material.Outlined.SettingsInputComponent" Color="Color.Inherit" IconColor="Color.Default" Size="Size.Large">Engines</MudButton>
-            <MudButton Href="/tracks" Variant="Variant.Filled" StartIcon="@Icons.Material.Outlined.AddRoad" Color="Color.Inherit" IconColor="Color.Primary" Size="Size.Large">Tracks</MudButton>
-            <MudButton Href="/traits" Variant="Variant.Filled" StartIcon="@Icons.Material.Outlined.FlashOn" Color="Color.Inherit" IconColor="Color.Primary" Size="Size.Large">Traits</MudButton>
-        </MudToolBar>
-    </MudPaper>
-    <MudPaper Class="mt-10 mb-10" Elevation="15">
-        <MudButtonGroup Variant="Variant.Filled" Color="Color.Inherit" Size="Size.Large" Style="flex:1">
-            <MudButton Href="/drivers" StartIcon="@Icons.Material.Outlined.PeopleAlt" IconColor="Color.Transparent">Drivers</MudButton>
-            <MudButton Href="/teams" StartIcon="@Icons.Material.Outlined.CarRepair" IconColor="Color.Primary">Teams</MudButton>
-            <MudButton Href="/engines" StartIcon="@Icons.Material.Outlined.SettingsInputComponent" IconColor="Color.Default">Engines</MudButton>
-            <MudButton Href="/tracks" StartIcon="@Icons.Material.Outlined.AddRoad" IconColor="Color.Secondary">Tracks</MudButton>
-            <MudButton Href="/traits" StartIcon="@Icons.Material.Outlined.FlashOn" IconColor="Color.Tertiary">Traits</MudButton>
-        </MudButtonGroup>
-    </MudPaper>
+    <MudButtonGroup Variant="Variant.Filled" Color="Color.Inherit" Size="Size.Large" Class="mt-10 mb-10">
+        <MudButton Href="/drivers" StartIcon="@Icons.Material.Outlined.PeopleAlt" IconColor="Color.Surface">Drivers</MudButton>
+        <MudButton Href="/teams" StartIcon="@Icons.Material.Outlined.CarRepair" IconColor="Color.Primary">Teams</MudButton>
+        <MudButton Href="/engines" StartIcon="@Icons.Material.Outlined.SettingsInputComponent" IconColor="Color.Default">Engines</MudButton>
+        <MudButton Href="/tracks" StartIcon="@Icons.Material.Outlined.AddRoad" IconColor="Color.Secondary">Tracks</MudButton>
+        <MudButton Href="/traits" StartIcon="@Icons.Material.Outlined.FlashOn" IconColor="Color.Tertiary">Traits</MudButton>
+    </MudButtonGroup>
     <MudContainer>
         @Body
     </MudContainer>
