--- a/SimTECH/SimTECH/Pages/_Host.cshtml
+++ b/SimTECH/SimTECH/Pages/_Host.cshtml
@@ -14,7 +14,8 @@
     <link rel="icon" type="image/png" href="favicon.png" />
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
     <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
-    <link rel="stylesheet" href="https://kit.fontawesome.com/d60725a0b3.css" crossorigin="anonymous">
+
+    <script src="https://kit.fontawesome.com/d60725a0b3.js" crossorigin="anonymous"></script>
 
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
 </head>
