--- a/SimTECH/SimTECH/Pages/Factors/Strategies.razor
+++ b/SimTECH/SimTECH/Pages/Factors/Strategies.razor
@@ -1,5 +1,53 @@
-﻿<h3>Strategies</h3>
+﻿@page "/strategys"
+@layout SetupLayout
+
+@inject StrategyService StrategyService
+@inject IDialogService DialogService
+
+<PageTitle>Strategys</PageTitle>
+
+<MudContainer>
+    <h2>Strategys</h2>
+    <MudPaper Class="d-flex align-center pa-2 mx-2 my-2">
+        <MudButton Variant="Variant.Text" Color="Color.Success" OnClick="@((e) => AddStrategy())">New</MudButton>
+    </MudPaper>
+    <MudDataGrid T="Strategy" Items="@StrategyNames" EditMode="DataGridEditMode.Cell" CommittedItemChanges="ModifyStrategy" Bordered="true" Dense="true" EditTrigger="DataGridEditTrigger.Manual">
+        <Columns>
+            <Column T="Strategy" CellClass="d-flex justify-end">
+                <CellTemplate>
+                    <MudButtonGroup>
+                        <MudIconButton Size="@Size.Small" Icon="@Icons.Material.Outlined.Edit" OnClick="@context.Actions.StartEditingItem" />
+                    </MudButtonGroup>
+                </CellTemplate>
+            </Column>
+        </Columns>
+        <PagerContent>
+            <MudDataGridPager T="Strategy" />
+        </PagerContent>
+    </MudDataGrid>
+</MudContainer>
 
 @code {
+    private List<Strategy> StrategyNames = new();
 
+    protected override void OnInitialized()
+    {
+        StrategyNames = StrategyService.GetTestData();
+    }
+
+    void ModifyStrategy(Strategy item)
+    {
+        // TODO: Store edited values
+    }
+
+    async Task AddStrategy()
+    {
+        var dialog = await DialogService.ShowAsync<StrategyCreate>("Create a new strategy");
+        var result = await dialog.Result;
+
+        if (!result.Canceled && result.Data != null && result.Data is Strategy newStrategy)
+        {
+            StrategyNames.Add(newStrategy);
+        }
+    }
 }
